fix: mobile device ui layout issues

--- a/components/chatComps/styles/filteroptions.module.css
+++ b/components/chatComps/styles/filteroptions.module.css
@@ -11,8 +11,8 @@
     font-weight: 400;
     /* line-height: normal; */
     z-index: 9;
-    margin-top: 0rem;
-    margin-right: 1.5rem;
+    margin-top: 0.2rem;
+    margin-right: 1rem;
     justify-content: center;
     /* background-color: black; */
 
